# auth_todo

./: .env.example  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  entrypoint.sh  init-db.sh  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: linters.yml  tests.yml
alembic/versions/: 2b1a7e842365_added_the_is_verified_field_to_the_user_.py  315dcd420a4f_initial_migration.py  69882aaea7d8_update_user_table.py  ae536998e688_updated_role_permissions_table.py  b0c203e5aeec_added_table_for_refresh_token.py
app/: database.py  exceptions.py  main.py  middleware.py  routers.py  schemas.py  services.py  utils.py
app/models/: database.py  roles.py  users.py
app/routers/: users.py
app/schemas/: users.py
db/: dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: 2b1a7e842365_added_the_is_verified_field_to_the_user_.py  315dcd420a4f_initial_migration.py  64f5562bd56c_initial_migration.py  69882aaea7d8_update_user_table.py  ae536998e688_updated_role_permissions_table.py  b0c203e5aeec_added_table_for_refresh_token.py
tests/: conftest.py  test.py
tests/test_admin/: __init__.py  test_admin_delete_user.py  test_admin_read_user.py  test_admin_read_users.py  test_admin_update_user.py
tests/test_login/: __init__.py  test_forget_password.py  test_login.py  test_refresh_access_token.py  test_reset_password.py
tests/test_permission/: __init__.py  test_create_permission.py  test_delete_permission.py  test_read_permission.py  test_read_permissions.py  test_update_permission.py
tests/test_role/: __init__.py  test_create_role.py  test_delete_role.py  test_read_role.py  test_read_roles.py  test_update_role.py
tests/test_role_permission/: __init__.py  test_assign_permission_to_role.py  test_read_permissions_for_role.py  test_read_roles_for_permission.py  test_remove_permission_from_role.py
tests/test_user/: __init__.py  test_confirm_email.py  test_create_user.py  test_delete_user.py  test_get_users_emails.py  test_read_user.py  test_read_users.py  test_send_new_confirmation_link.py  test_update_user.py
(+5 files in other folders)
