[tool.poetry]
name = "auth-todo"
version = "0.1.0"
description = ""
authors = ["Valerolactone <varanchukv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"

[tool.pytest.ini_options]
pythonpath = [
    '.'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
